--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
         быть число 3, потому что 3 + 4 = 7
     </string>
     <string name="composition_number">Состав числа</string>
+    <string name="question_mark">\?</string>
+    <string name="right_answers">Правильных ответов %s из %s необходимых</string>
     <string name="choose_level">Выберете уровень</string>
     <string name="test">TEST</string>
     <string name="easy">EASY</string>
